# Edited-Substrate-Node-With-Local-Packages

./: README.md
Blockchain-Node/: .gitignore  Cargo.toml  Generate-spec-json.sh  customSpec.json  customSpecRaw.json
Blockchain-Node/node/: Cargo.toml
Blockchain-Node/node/Original-Node/: Cargo.toml
Blockchain-Node/node/Original-Node/src/: chain_spec.rs
Blockchain-Node/node/original/: Cargo.toml
Blockchain-Node/node/src/: chain_spec.rs
Blockchain-Node/pallets/collectibles/: Cargo.toml
Blockchain-Node/pallets/collectibles/src/: lib.rs
Blockchain-Node/pallets/ea4healthcare/: Cargo.toml
Blockchain-Node/pallets/ea4healthcare/src/: lib.rs  weights.rs
Blockchain-Node/pallets/kitties/: Cargo.toml
Blockchain-Node/pallets/kitties/src/: lib.rs
Blockchain-Node/pallets/template/: Cargo.toml
Blockchain-Node/runtime/: Cargo.toml
Blockchain-Node/runtime/Original-Runtime/: Cargo.toml
Blockchain-Node/runtime/Original-Runtime/src/: lib.rs
Blockchain-Node/runtime/original/: Cargo.toml
Blockchain-Node/runtime/src/: lib.rs
