[package]
name = "node-template-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

pallet-aura = { version = "4.0.0-dev", default-features = false, path = "../../Packages/frame/aura" }
pallet-balances = { default-features = false, path = "../../Packages/frame/balances" }
frame-support = { default-features = false, path = "../../Packages/frame/support" }
pallet-grandpa = { default-features = false, path = "../../Packages/frame/grandpa" }
pallet-randomness-collective-flip = { default-features = false, path = "../../Packages/frame/randomness-collective-flip" }
pallet-sudo = { default-features = false, path = "../../Packages/frame/sudo" }
frame-system = { default-features = false, path = "../../Packages/frame/system" }
frame-try-runtime = { default-features = false, path = "../../Packages/frame/try-runtime", optional = true}
pallet-timestamp = { default-features = false, path = "../../Packages/frame/timestamp" }
pallet-transaction-payment = { default-features = false, path = "../../Packages/frame/transaction-payment" }
frame-executive = { default-features = false, path = "../../Packages/frame/executive" }
sp-api = { default-features = false, path = "../../Packages/primitives/api" }
sp-block-builder = { default-features = false, path = "../../Packages/primitives/block-builder" }
sp-consensus-aura = { default-features = false, path = "../../Packages/primitives/consensus/aura"}
sp-core = { default-features = false, path = "../../Packages/primitives/core"}
sp-inherents = { default-features = false, path = "../../Packages/primitives/inherents"}
sp-offchain = { default-features = false, path = "../../Packages/primitives/offchain"}
sp-runtime = { default-features = false, path = "../../Packages/primitives/runtime"}
sp-session = { default-features = false, path = "../../Packages/primitives/session"}
sp-std = { default-features = false, path = "../../Packages/primitives/std"}
sp-transaction-pool = { default-features = false, path = "../../Packages/primitives/transaction-pool"}
sp-version = { default-features = false, path = "../../Packages/primitives/version"}

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, path = "../../Packages/frame/system/rpc/runtime-api" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, path = "../../Packages/frame/transaction-payment/rpc/runtime-api" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, path = "../../Packages/frame/benchmarking", optional = true }
frame-system-benchmarking = { default-features = false, path = "../../Packages/frame/system/benchmarking", optional = true }

# Local Dependencies
pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
collectibles = { default-features = false, path = "../pallets/collectibles" }

[build-dependencies]
substrate-wasm-builder = { default-features = false, path = "../../Packages/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"collectibles/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
