[package]
name = "ea4healthcare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152",  default-features = false }

frame-system = { default-features = false, path = "../../../Packages/frame/system" }
frame-support = { default-features = false, path = "../../../Packages/frame/support" }
sp-std = { default-features = false, path = "../../../Packages/primitives/std" }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  'sp-std/std',
]