[package]
name = "kitties"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-system = { default-features = false, path = "../../../Packages/frame/system" }
frame-support = { default-features = false, path = "../../../Packages/frame/support" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { default-features = false }
log = { default-features = false, version = "0.4.14" }

[dev-dependencies]
sp-core = { default-features = false, path = "../../../Packages/primitives/core"}
sp-io = { default-features = false, path = "../../../Packages/primitives/io"}
sp-runtime = { default-features = false, path = "../../../Packages/primitives/runtime"}

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
]
